--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,13 +9,19 @@ set(CMAKE_CXX_STANDARD 20)
 #add_subdirectory(third_party/Catch2)
 
 
-# Main executable
-add_executable(MathResearch2 main.cpp Fraction.hpp)
+# Runner Main executable
+add_executable(MathResearch2 runnner_main.cpp Fraction.hpp)
 target_link_libraries(MathResearch2 PRIVATE Boost::boost)
+
+
+# Generator executable
+add_executable(MathResearch2_Generator generator_main.cpp Fraction.hpp)
+target_link_libraries(MathResearch2_Generator PRIVATE Boost::boost)
 
 # Test executable
 add_executable(MathResearch2_Tests tests/test1.cpp Fraction.hpp tests/FractionTest.cpp tests/BitsetTest.cpp)
 target_link_libraries(MathResearch2_Tests PRIVATE Catch2::Catch2WithMain Boost::boost)
+
 
 include(Ctest)
 enable_testing()
