--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ find_package(Catch2 REQUIRED)
 set(CMAKE_CXX_STANDARD 20)
 
 #add_subdirectory(third_party/Catch2)
-
+set(CMAKE_CXX_COMPILER "/opt/homebrew/opt/llvm/bin/clang++")
 
 # Runner Main executable
 add_executable(MathResearch2 runnner_main.cpp Fraction.hpp BloomFilter.hpp Logger.hpp)
@@ -18,7 +18,9 @@ target_link_libraries(MathResearch2 PRIVATE Boost::boost)
 add_executable(MathResearch2_Generator_bf generator_bf_main.cpp Fraction.hpp BloomFilter.hpp Logger.hpp)
 target_link_libraries(MathResearch2_Generator_bf PRIVATE Boost::boost)
 
-
+# Checker Bloom Filter executable
+add_executable(MathResearch2_Checker_bf checker_bf_main.cpp Fraction.hpp BloomFilter.hpp Logger.hpp)
+target_link_directories(MathResearch2_Checker_bf PRIVATE Boost::boost)
 
 # Test executable
 add_executable(MathResearch2_Tests tests/test1.cpp Fraction.hpp tests/FractionTest.cpp tests/BitsetTest.cpp)
